# MadDevsTest

./: README.md  index copy.html  pyproject.toml  split_msg.py  target.html  test-3.html  test-4.html
html_fragmentor/: __init__.py  counter.py  emoji.py  exceptions.py  helpers.py  line_endings.py  msg_split copy 2.py  msg_split copy.py  msg_split.py
tests/: msg_split_test.py  source1.html
